<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_text"
        style="@style/text_views"
        android:layout_alignParentTop="true"
        android:text="@string/your_music"
        />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_text"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        tools:context=".YourMusic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/small_skip_back_button"
            style="@style/buttons"
            android:layout_weight="3"
            android:src="@drawable/ic_skip_previous"
            android:contentDescription="@string/skip_previous_song"/>

        <ImageView
            android:id="@+id/small_play_button"
            style="@style/buttons"
            android:layout_weight="1"
            android:src="@drawable/ic_play_arrow"
            android:contentDescription="@string/play_song"/>

        <ImageView
            android:id="@+id/small_skip_forward_button"
            style="@style/buttons"
            android:layout_weight="3"
            android:src="@drawable/ic_skip_next"
            android:contentDescription="@string/skip_next_song"/>

    </LinearLayout>
</RelativeLayout>