<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructureapp.NowPlaying">
    <TextView
        android:id="@+id/title_text"
        style="@style/text_views"
        android:layout_alignParentTop="true"
        android:text="@string/now_playing"
        />

    <ImageView
        android:id="@+id/album_art_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDarker"
        android:contentDescription="Album Art"
        android:scaleType="centerCrop"
        tools:src="@drawable/expectations" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_text_view2"
            style="@style/song_info"
            tools:text="Song Title" />

        <TextView
            android:id="@+id/artist_text_view2"
            style="@style/song_info"
            tools:text="Artist" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/large_skip_back_button"
                style="@style/buttons"
                android:layout_weight="3"
                android:src="@drawable/ic_skip_previous"
                android:contentDescription="@string/skip_previous_song"/>

            <ImageView
                android:id="@+id/large_play_button"
                style="@style/buttons"
                android:layout_weight="3"
                android:src="@drawable/ic_play_circle_filled"
                android:contentDescription="@string/play_song"/>

            <ImageView
                android:id="@+id/large_skip_forward_button"
                style="@style/buttons"
                android:layout_weight="3"
                android:src="@drawable/ic_skip_next"
                android:contentDescription="@string/skip_next_song"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
